--- a/404.html
+++ b/404.html
@@ -1,41 +1,43 @@
 <!doctype html>
 <html>
 <head>
-  <title>about me - hannah stein designs</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-52747973-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-52747973-1');
+  </script>
+  <title>hannah stein designs</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, initial-scale=1, maximum-scale=2, user-scalable=yes">
   <!-- styles & images -->
-  <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Roboto:400,700" rel="stylesheet">
+  <link href="css/lightbox.css" rel="stylesheet">
+  <link href="css/styles.css" rel="stylesheet">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <!-- scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-52747973-1', 'auto');
-  ga('send', 'pageview');
-  </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/jquery.validate.min.js"></script>
+  <script src="js/lightbox.js"></script>
 </head>
 
 <body>
   <!-- header -->
-  <header id="header" class="width">
-    <a href="/" class="logo left"><img src="images/HSD-logo.png" width="200" alt="Hannah Stein design and development" /></a>
-      <a class="mobile-nav right" title="toggle menu">
-      	<span></span>
-      </a>
-      <nav class="nav right">
-        <ul>
-          <li><a href="/" title="portfolio">portfolio</a></li>
-          <li><a href="about.html" title="about" class="active">about</a></li>
-          <li><a href="contact.html" title="contact">contact</a></li>
-        </ul>
-      </nav>
+  <header>
+    <div class="width">
+      <h1><a href="/">Hannah Stein</a></h1>
+        <a class="mobile-nav" title="toggle menu"><span></span></a>
+        <nav>
+          <a href="/" title="portfolio">portfolio</a>
+          <a href="about.html" title="about">about</a>
+          <a href="contact.html" title="contact">contact</a>
+        </nav>
+    </div>
     </header>
     <div class="clear"></div>
   <!-- content -->
@@ -46,39 +48,70 @@
 
   <div class="clear"></div>
   <!-- footer -->
-  <footer id="footer" class="width">
-    <div class="social">
-      <a href="mailto:&#104;&#97;&#110;&#110;&#97;&#104;&#115;&#116;&#101;&#105;&#110;&#100;&#101;&#115;&#105;&#103;&#110;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;" title="email me"><img src="images/email.svg" alt="email" width="42" /></a>
-      <a href="https://www.linkedin.com/pub/hannah-stein/76/978/1b8" title="connect on linkedin"><img src="images/linkedin.svg" alt="linkedin" width="42" /></a>
-      <a href="https://www.issuu.com/hannahsteindesigns" title="see my print portfolio"><img src="images/issuu.svg" alt="issuu" width="42" /></a>
+  <footer>
+    <div class="width">
+      <h2>Let's talk.</h2>
+      <section>
+        <div class="social">
+          <a href="mailto:&#104;&#97;&#110;&#110;&#97;&#104;&#115;&#116;&#101;&#105;&#110;&#100;&#101;&#115;&#105;&#103;&#110;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;" title="email me">
+            <img src="images/email.svg" width="24" />
+            <span>hannahsteindesigns@gmail.com</span>
+          </a>
+          <a href="https://www.linkedin.com/in/hannahsteindesigns" title="connect on linkedin">
+            <img src="images/linkedin.svg" width="24" />
+            <span>linkedin.com/in/hannahsteindesigns</span>
+          </a>
+          <a href="https://www.behance.net/hannahsteindesigns" title="see more of my work on behance">
+            <img src="images/behance.svg" width="24" />
+            <span>behance.net/hannahsteindesigns</span>
+          </a>
+        </div>
+        <div class="form">
+          <div id="form-messages"></div>
+          <form name="hscontact" id="form" method="post" action="contact.php" novalidate>
+            <div class="name-input">
+              <input required type="text" name="name" id="name">
+              <label for="name" placeholder="Name"></label>
+            </div>
+            <div class="email-input">
+              <input required type="email" name="email" id="email">
+              <label for="email" placeholder="Email"></label>
+            </div>
+            <div class="message-input">
+              <textarea required name="message" id="message"></textarea>
+              <label for="message" placeholder="Send me a message"></label>
+            </div>
+            <button type="submit" id="submitbtn" class="full">Send</button>
+          </form>
+        </div>
+      </section>
     </div>
   </footer>
   <script>
     $(document).ready(function(){
-      $('.mobile-nav').on('click', function(){
-        $(this).toggleClass('active');
-        $('.nav').toggleClass('open');
+      $(".mobile-nav").click(function(){
+        $(this).toggleClass("active");
+        $("nav").slideToggle()
       });
-
-      $('.icon-border').hover(
-        function(){
-          var text = $(this).attr('data-description');
-          $(this).siblings('.description').html(text);
-        }, function(){
-          $(this).siblings('.description').html('')
+      $("#form").validate({
+        errorElement: "div",
+        errorPlacement: function(error, element) {
+          error.appendTo( element.parent("div") ).hide().fadeIn();
+        },
+        showErrors: function(errorMap, errorList) {
+          this.defaultShowErrors();
+          $.each(errorMap, function(key, value) {
+            var error = $("input[name='" + key + "']").nextAll("div");
+            if (error.text() !== value) {
+              error.hide().html(value).fadeIn();
+            }
+          });
         }
-      );
-
-
-      // $('.icon-border').on( 'click touchstart', function(){
-      //   $(this).toggleClass('active');
-      //   $(this).siblings('.icon-border').removeClass('active');
-
-      //   var text = $(this).attr('data-description');
-      //       description = $(this).siblings('.description');
-
-      //   description.html() == '' ? description.html(text) : description.html('');
-      // });
+      });
+      $("input, textarea").change(function(){
+        var el = $(this);
+        el.val().trim().length ? el.addClass("focus") : el.removeClass("focus");
+      });
     });
   </script>
 </body>
