--- a/index.html
+++ b/index.html
@@ -1,49 +1,61 @@
 <!doctype html>
 <html>
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-52747973-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-52747973-1');
+  </script>
   <title>hannah stein designs</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, initial-scale=1, maximum-scale=2, user-scalable=yes">    
+  <meta name="viewport" content="width=device-width, initial-scale=1, initial-scale=1, maximum-scale=2, user-scalable=yes">
   <!-- styles & images -->
-  <link rel="stylesheet" href="css/style.css"> 
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Roboto:400,700" rel="stylesheet">
   <link href="css/lightbox.css" rel="stylesheet">
+  <link href="css/styles.css" rel="stylesheet">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <!-- scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-52747973-1', 'auto');
-  ga('send', 'pageview');
-  </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/jquery.validate.min.js"></script>
   <script src="js/lightbox.js"></script>
 </head>
 
 <body>
   <!-- header -->
-  <header id="header" class="width">
-    <a href="#" class="logo left"><img src="images/HSD-logo.png" width="200" alt="Hannah Stein design and development" /></a>
-      <a class="mobile-nav right" title="toggle menu">
-      	<span></span>
-      </a>
-      <nav class="nav right">
-        <ul>
-          <li><a href="#" title="portfolio" class="active">portfolio</a></li>
-          <li><a href="about.html" title="about">about</a></li>
-          <li><a href="contact.html" title="contact">contact</a></li>
-        </ul>
-      </nav>
+  <header>
+    <div class="width">
+      <h1><a href="#">Hannah Stein</a></h1>
+        <a class="mobile-nav" title="toggle menu"><span></span></a>
+        <nav>
+          <a href="#" title="portfolio" class="active">portfolio</a>
+          <a href="about.html" title="about">about</a>
+          <a href="#contact" title="contact">contact</a>
+        </nav>
+    </div>
     </header>
-    <div class="clear"></div>
   <!-- content -->
   <section id="content" class="width">
-    <h1>design &amp; development</h1>
+    <h2>design &amp; development</h2>
     <div class="portfolio">
+      <!-- Transcend -->
+      <!-- TB purchase process -->
+      <!-- Central Research Associates -->
+      <a href="images/portfolio/cra.jpg" data-lightbox="portfolio">
+        <figure>
+          <img src="images/portfolio/thumb/cra.jpg" alt="Central Research Associates" width="300" height="250"/>
+          <figcaption>
+            <h4>Central Research Associates</h4>
+            <p>website design and custom wordpress theme</p>
+            <p>read more about this project</p>
+          </figcaption>
+        </figure>
+      </a>
       <!-- Home by Mae Beth -->
       <a href="images/portfolio/home.jpg" data-lightbox="portfolio">
         <figure>
@@ -54,38 +66,8 @@
           </figcaption>
         </figure>
       </a>
-      <!-- Central Research Associates -->
-      <a href="images/portfolio/cra.jpg" data-lightbox="portfolio" data-title="<a href='http://cra.hannahsteindesigns.com'>Visit Central Research Associates</a>">
-        <figure>
-          <img src="images/portfolio/thumb/cra.jpg" alt="Central Research Associates" width="300" height="250"/>
-          <figcaption>
-            <h4>Central Research Associates</h4>
-            <p>website design and custom wordpress theme</p>
-          </figcaption>
-        </figure>
-      </a>
-      <!-- Music Piracy Infographic -->
-      <a href="images/portfolio/music-piracy.jpg" data-lightbox="portfolio" data-title="<a href='https://issuu.com/hannahsteindesigns/docs/musicpiracy'>View larger</a>">
-        <figure>
-          <img src="images/portfolio/thumb/music-piracy.jpg" alt="music piracy infographic" width="300" height="250"/>
-          <figcaption>
-            <h4>Music Piracy Infographic</h4>
-            <p>infographic poster</p>
-          </figcaption>
-        </figure>
-      </a>
-      <!-- Bill Assurance -->
-      <a href="images/portfolio/bill-assurance.jpg" data-lightbox="portfolio">
-        <figure>
-          <img src="images/portfolio/thumb/bill-assurance.jpg" alt="Bill Assurance splash page" width="300" height="250"/>
-          <figcaption>
-            <h4>Bill Assurance</h4>
-            <p>splash page design and creation</p>
-          </figcaption>
-        </figure>
-      </a>
-      <!-- Rojo Ad -->
-      <a href="images/portfolio/rojo.jpg" data-lightbox="portfolio">      
+      <!-- Rojo Ad & Menus -->
+      <a href="images/portfolio/rojo.jpg" data-lightbox="portfolio">
         <figure>
           <img src="images/portfolio/thumb/rojo.jpg" alt="Rojo ad" width="300" height="250"/>
           <figcaption>
@@ -94,7 +76,7 @@
           </figcaption>
         </figure>
       </a>
-      <!-- Tour de Brewers 7 -->
+      <!-- Tour de Brewers 7 & 10, logo -->
       <a href="images/portfolio/tdb7.jpg" data-lightbox="portfolio">
         <figure>
           <img src="images/portfolio/thumb/tdb7.jpg" alt="Tour de Brewers 7 shirt" width="300" height="250"/>
@@ -124,35 +106,55 @@
           </figcaption>
         </figure>
       </a>
-      <!-- Bingo Birmingham -->
-      <a href="images/portfolio/bingo.jpg" data-lightbox="portfolio" data-title="<a href='http://bingobirmingham.com'>Visit Bingo Birmingham</a>">
-        <figure>
-          <img src="images/portfolio/thumb/bingo.jpg" alt="Bingo Birmingham" width="300" height="250"/>
-          <figcaption>
-            <h4>Bingo Birmingham</h4>
-            <p>wordpress conversion</p>
-          </figcaption>
-        </figure>
-      </a>
+      <!-- Dixon's wedding -->
+      <!-- Tower -->
     </div>
   </section>
   <div class="clear"></div>
   <!-- footer -->
-  <footer id="footer" class="width">
-    <div class="social">
-      <a href="mailto:&#104;&#97;&#110;&#110;&#97;&#104;&#115;&#116;&#101;&#105;&#110;&#100;&#101;&#115;&#105;&#103;&#110;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;" title="email me"><img src="images/email.svg" alt="email" width="42" /></a>
-      <a href="https://www.linkedin.com/pub/hannah-stein/76/978/1b8" title="connect on linkedin"><img src="images/linkedin.svg" alt="linkedin" width="42" /></a>
-      <a href="https://www.issuu.com/hannahsteindesigns" title="see my print portfolio"><img src="images/issuu.svg" alt="issuu" width="42" /></a>
+  <footer id="contact">
+    <div class="width">
+      <section>
+        <div class="social">
+          <h2>Let's talk.</h2>
+          <a href="mailto:&#104;&#97;&#110;&#110;&#97;&#104;&#115;&#116;&#101;&#105;&#110;&#100;&#101;&#115;&#105;&#103;&#110;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;" title="email me">
+            <img src="images/email.svg" width="24" />
+            <span>hannahsteindesigns@gmail.com</span>
+          </a>
+          <a href="https://www.linkedin.com/in/hannahsteindesigns" title="connect on linkedin">
+            <img src="images/linkedin.svg" width="24" />
+            <span>linkedin.com/in/hannahsteindesigns</span>
+          </a>
+          <a href="https://www.behance.net/hannahsteindesigns" title="see more of my work on behance">
+            <img src="images/behance.svg" width="24" />
+            <span>behance.net/hannahsteindesigns</span>
+          </a>
+          <a href="https://issuu.com/hannahsteindesigns" title="see more of my print work on issuu">
+            <img src="images/issuu.svg" width="24" />
+            <span>issuu.com/hannahsteindesigns</span>
+          </a>
+        </div>
+        <div class="form">
+          <div id="form-messages"></div>
+          <form name="hscontact" id="form" method="post" action="contact.php" novalidate>
+            <div class="name-input">
+              <input required type="text" name="name" id="name">
+              <label for="name" placeholder="Name"></label>
+            </div>
+            <div class="email-input">
+              <input required type="email" name="email" id="email">
+              <label for="email" placeholder="Email"></label>
+            </div>
+            <div class="message-input">
+              <textarea required name="message" id="message"></textarea>
+              <label for="message" placeholder="Send me a message"></label>
+            </div>
+            <button type="submit" id="submitbtn" class="full">Send</button>
+          </form>
+        </div>
+      </section>
     </div>
   </footer>
-  <script>
-    $(document).ready(function(){
-      $('.mobile-nav').on('click', function(){
-        $(this).toggleClass('active');
-        $('.nav').toggleClass('open');
-      });
-    });
-  </script>
+  <script src="js/scripts.js"></script>
 </body>
-
 </html>
