--- a/submit.html
+++ b/submit.html
@@ -2,30 +2,29 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-52747973-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-52747973-1');
+  </script>
     <title>hannah stein designs</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="stylesheet" href="css/skeleton.css">
-    <link rel="stylesheet" href="css/responsive.css"> 
+    <link rel="stylesheet" href="css/responsive.css">
     <script src="js/jquery-1.11.1.js"></script>
     <script src="contact.php"></script>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <script src="https://raw.github.com/x1024/jquery-fastbutton/master/bin/fastbutton.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-52747973-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
 <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Roboto:400,700" rel="stylesheet">
 
 </head>
-  
+
 <body class="use-fastclick">
 <div class="container">
 
