contact form updates

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
               <textarea required name="message" id="message"></textarea>
               <label for="message" placeholder="Send me a message"></label>
             </div>
-            <button type="submit" id="submitbtn" class="full">Send</button>
+            <button type="submit" id="submit" class="full">Send</button>
           </form>
         </div>
       </section>
