--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, initial-scale=1, maximum-scale=2, user-scalable=yes">
   <!-- styles & images -->
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Roboto:400,700" rel="stylesheet">
-  <link href="css/lightbox.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -23,7 +22,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/jquery.validate.min.js"></script>
-  <script src="js/lightbox.js"></script>
 </head>
 
 <body>
@@ -43,74 +41,75 @@
   <section id="content" class="width">
     <h2>design &amp; development</h2>
     <div class="portfolio">
-      <!-- Transcend -->
       <!-- TB purchase process -->
-      <!-- Central Research Associates -->
-      <a href="images/portfolio/cra.jpg" data-lightbox="portfolio">
-        <figure>
-          <img src="images/portfolio/thumb/cra.jpg" alt="Central Research Associates" width="300" height="250"/>
-          <figcaption>
-            <h4>Central Research Associates</h4>
-            <p>website design and custom wordpress theme</p>
-            <p>read more about this project</p>
-          </figcaption>
-        </figure>
-      </a>
-      <!-- Home by Mae Beth -->
-      <a href="images/portfolio/home.jpg" data-lightbox="portfolio">
-        <figure>
-          <img src="images/portfolio/thumb/home.jpg" alt="Home by Mae Beth" width="300" height="250"/>
-          <figcaption>
-            <h4>Home by Mae Beth</h4>
-            <p>interior design logo</p>
-          </figcaption>
-        </figure>
-      </a>
-      <!-- Rojo Ad & Menus -->
-      <a href="images/portfolio/rojo.jpg" data-lightbox="portfolio">
-        <figure>
-          <img src="images/portfolio/thumb/rojo.jpg" alt="Rojo ad" width="300" height="250"/>
-          <figcaption>
-            <h4>Rojo ad</h4>
-            <p>ad design for Weld</p>
-          </figcaption>
-        </figure>
-      </a>
-      <!-- Tour de Brewers 7 & 10, logo -->
-      <a href="images/portfolio/tdb7.jpg" data-lightbox="portfolio">
-        <figure>
-          <img src="images/portfolio/thumb/tdb7.jpg" alt="Tour de Brewers 7 shirt" width="300" height="250"/>
-          <figcaption>
-            <h4>Tour de Brewers 7</h4>
-            <p>shirt design</p>
-          </figcaption>
-        </figure>
-       </a>
-      <!-- Kinetic Portfolio -->
-      <a href="images/portfolio/kinetic.jpg" data-lightbox="portfolio" data-title="<a href='http://kinetic.com/the-work'>Visit Kinetic portfolio page</a>">
-        <figure>
-          <img src="images/portfolio/thumb/kinetic.jpg" alt="Kinetic portfolio" width="300" height="250"/>
-          <figcaption>
-            <h4>Kinetic portfolio</h4>
-            <p>portfolio page redesign and implementation</p>
-          </figcaption>
-        </figure>
-      </a>
-      <!-- Social Work newsletter -->
-      <a href="images/portfolio/swk.jpg" data-lightbox="portfolio">
-        <figure>
-          <img src="images/portfolio/thumb/swk.jpg" alt="Social Work newsletter" width="300" height="250"/>
-          <figcaption>
-            <h4>Social Work newsletter</h4>
-            <p>newsletter redesign and basic email marketing campaign for social work program at the University of Montevallo</p>
-          </figcaption>
-        </figure>
-      </a>
-      <!-- Dixon's wedding -->
+      <article>
+        <div class="placeholder"></div>
+        <div class="details">
+          <h3>TicketBiscuit</h3>
+          <h6>purchase process redesign</h6>
+          <p>TicketBiscuit is an online ticketing platform where clients can manage their events and customers can buy tickets. In this project I simplified the purchase process and modernized the design. I focused on optimizing the experience for mobile users especially &mdash; reducing clicks and increasing conversion rates.</p>
+          <a class="button" href="#" title="View Case Study">view case study</a>
+        </div>
+      </article>
+      <!-- Transcend -->
+      <article>
+        <div class="placeholder"></div>
+        <div class="details">
+          <h3>Transcend Counseling</h3>
+          <h6>logo design & custom wordpress theme</h6>
+          <p>When Robyn opened her practice, Transcend Individual and Family Counseling, in 2017 she needed to brand herself with a logo and create an online presence. She wanted something clean and simple while still allowing her personality to shine through.</p>
+          <a class="button" href="#" title="View Case Study">view case study</a>
+        </div>
+      </article>
       <!-- Tower -->
+      <article>
+        <div class="placeholder"></div>
+        <div class="details">
+          <h3>Tower &mdash; University of Montevallo</h3>
+          <h6>literary magazine layout and curation</h6>
+          <p>In my final year of school at Montevallo, I was chosen as the Editor-in-Chief of the university's literary magazine. I managed a team of section editors to solicit and select entries from the student body. At the end of the year, I combined these entries into a book that was printed and given to all students. On top of that, I was able to stay within my (somewhat meager) budget.</p>
+          <a href="">flip through a digital copy of the book</a>
+        </div>
+      </article>
+      <!-- Rojo Ad & Menus -->
+      <article>
+        <div class="placeholder"></div>
+        <div class="details">
+          <h3>Rojo Latin & American Food</h3>
+          <h6>ad design & menu redesign</h6>
+          <p>I initially created this ad as a t-shirt design for a contest the restaurant held, but when I didn't win they asked me to adapt the design for an ad. (No hard feelings!) That ad ran in the weekly news magazine <em>Weld</em> for nearly two years.</p>
+          <p>After I designed the ad, we worked together doing routine menu updates along with a redesign of their cocktail menu. It was really immportant to them to have the design be lighter in color to conserve ink when printing, but it still had to fit in with the other existing menus. I created an interactive PDF so they can update their draft beers at will.</p>
+        </div>
+      </article>
+      <!-- Central Research Associates -->
+      <article>
+        <div class="placeholder"></div>
+        <div class="details">
+          <h3>Central Research Associates</h3>
+          <h6>custom wordpress theme</h6>
+          <p>primary audience: patients looking to enroll in free trials (front page, attention grabbing), secondary audience: potential sponsors (more of the in depth info) -- came in with existing logo -- information focused</p>
+        </div>
+      </article>
+      <!-- Tour de Brewers 7 & 10, logo -->
+      <article>
+        <div class="placeholder"></div>
+        <div class="details">
+          <h3>tour de brewers logos and stuff</h3>
+          <h6>t-shirt design</h6>
+          <p>against my aesthetic, common ground, bleh</p>
+        </div>
+      </article>
+      <!-- Dixon's wedding -->
+      <article>
+        <div class="placeholder"></div>
+        <div class="details">
+          <h3>Wedding Invitation Suite (?)</h3>
+          <h6>logo design</h6>
+          <p>water color design, </p>
+        </div>
+      </article>
     </div>
   </section>
-  <div class="clear"></div>
   <!-- footer -->
   <footer id="contact">
     <div class="width">
