--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <article>
         <div class="placeholder"></div>
         <div class="details">
-          <h3>purchase process redesign</h3>
+          <h3 class="red">purchase process redesign</h3>
           <h6>TicketBiscuit</h6>
           <p>TicketBiscuit is an online ticketing platform where clients can manage their events and customers can buy tickets. In this project I simplified the purchase process and modernized the design. I focused on optimizing the experience for mobile users especially &mdash; reducing clicks and increasing conversion rates.</p>
           <a class="button" href="portfolio/ticketbiscuit.html" title="View Case Study">view case study</a>
@@ -56,7 +56,7 @@
       <article class="right">
         <div class="placeholder"></div>
         <div class="details">
-          <h3>logo design & custom wordpress theme</h3>
+          <h3 class="red">logo design & custom wordpress theme</h3>
           <h6>Transcend Individual and Family Counseling</h6>
           <p>When Robyn opened her practice in 2017 she needed to brand herself with a logo and create an online presence. She wanted something clean and simple while still allowing her personality to shine through.</p>
           <a class="button" href="portfolio/transcend.html" title="View Case Study">view case study</a>
@@ -66,7 +66,7 @@
       <article>
         <div class="placeholder"></div>
         <div class="details">
-          <h3>literary magazine layout and curation</h3>
+          <h3 class="red">literary magazine layout and curation</h3>
           <h6>Tower &mdash; University of Montevallo</h6>
           <p>In my final year of school at Montevallo, I was chosen as the Editor-in-Chief of the university's literary magazine. I managed a team of section editors to solicit and select entries from the student body. At the end of the year, I combined these entries into a book that was printed and given to all students. On top of that, I was able to stay within my (somewhat meager) budget.</p>
           <a href="https://issuu.com/hannahsteindesigns/docs/tower14">flip through a digital copy of the book</a>
@@ -76,7 +76,7 @@
       <article class="right">
         <div class="placeholder"></div>
         <div class="details">
-          <h3>ad design &amp; menu redesign</h3>
+          <h3 class="red">ad design &amp; menu redesign</h3>
           <h6>Rojo Latin & American Food</h6>
           <p>I initially created this ad as a t-shirt design for a contest the restaurant held, but when I didn't win they asked me to adapt the design for an ad. (No hard feelings!) That ad ran in the weekly news magazine <em>Weld</em> for nearly two years.</p>
           <p>After I designed the ad, we worked together doing routine menu updates along with a redesign of their cocktail menu. It was really immportant to them to have the design be lighter in color to conserve ink when printing, but it still had to fit in with the other existing menus. I created an interactive PDF so they can update their draft beers at will.</p>
@@ -86,7 +86,7 @@
       <article>
         <div class="placeholder"></div>
         <div class="details">
-          <h3>custom wordpress theme</h3>
+          <h3 class="red">custom wordpress theme</h3>
           <h6>Central Research Associates</h6>
           <p>primary audience: patients looking to enroll in free trials (front page, attention grabbing), secondary audience: potential sponsors (more of the in depth info) -- came in with existing logo -- information focused</p>
         </div>
@@ -95,7 +95,7 @@
       <article class="right">
         <div class="placeholder"></div>
         <div class="details">
-          <h3>tour de brewers logos and stuff</h3>
+          <h3 class="red">tour de brewers logos and stuff</h3>
           <h6>t-shirt design</h6>
           <p>against my aesthetic, common ground, bleh</p>
         </div>
@@ -104,7 +104,7 @@
       <article>
         <div class="placeholder"></div>
         <div class="details">
-          <h3>Wedding Invitation Suite (?)</h3>
+          <h3 class="red">Wedding Invitation Suite (?)</h3>
           <h6>logo design</h6>
           <p>water color design, </p>
         </div>
