--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@
   <section id="content" class="width">
     <h2>design &amp; development</h2>
     <div class="portfolio">
-      <!-- I need one more case study! -->
       <!-- TB purchase process -->
       <article>
-        <div class="placeholder"></div>
+        <a href="portfolio/ticketbiscuit.html" title="view TicketBiscuit purchase process case study" class="img"><img src="images/portfolio/thumb/purchase-process.png"/></a>
         <div class="details">
           <h3 class="red">purchase process redesign</h3>
           <h6>TicketBiscuit</h6>
@@ -54,9 +53,9 @@
       </article>
       <!-- Transcend -->
       <article class="right">
-        <div class="placeholder"></div>
+        <a href="portfolio/transcend.html" title="view Transcend logo and site case study" class="img"><img src="images/portfolio/thumb/transcend.png"/></a>
         <div class="details">
-          <h3 class="red">logo design & custom wordpress theme</h3>
+          <h3 class="red">logo &amp; custom wordpress theme</h3>
           <h6>Transcend Individual and Family Counseling</h6>
           <p>When Robyn opened her practice in 2017 she needed to brand herself with a logo and create an online presence. She wanted something clean and simple while still allowing her personality to shine through.</p>
           <a class="button" href="portfolio/transcend.html" title="View Case Study">view case study</a>
@@ -64,9 +63,9 @@
       </article>
       <!-- Tower -->
       <article>
-        <div class="placeholder"></div>
+        <img src="images/portfolio/thumb/tower.png" title="tower literary magazine"/>
         <div class="details">
-          <h3 class="red">literary magazine layout and curation</h3>
+          <h3 class="red">literary magazine layout &amp; curation</h3>
           <h6>Tower &mdash; University of Montevallo</h6>
           <p>In my final year of school at Montevallo, I was chosen as the Editor-in-Chief of the university's literary magazine. I managed a team of section editors to solicit and select entries from the student body. At the end of the year, I combined these entries into a book that was printed and given to all students. On top of that, I was able to stay within my (somewhat meager) budget.</p>
           <a href="https://issuu.com/hannahsteindesigns/docs/tower14">flip through a digital copy of the book</a>
@@ -74,7 +73,7 @@
       </article>
       <!-- Rojo Ad & Menus -->
       <article class="right">
-        <div class="placeholder"></div>
+        <img src="images/portfolio/thumb/rojo.png" title="Rojo ad design and menu redesign"/>
         <div class="details">
           <h3 class="red">ad design &amp; menu redesign</h3>
           <h6>Rojo Latin & American Food</h6>
@@ -84,27 +83,18 @@
       </article>
       <!-- Central Research Associates -->
       <article>
-        <div class="placeholder"></div>
+        <img src="images/portfolio/thumb/central-trials.png" title="custom WordPress theme"/>
         <div class="details">
           <h3 class="red">custom wordpress theme</h3>
           <h6>Central Research Associates</h6>
           <p>primary audience: patients looking to enroll in free trials (front page, attention grabbing), secondary audience: potential sponsors (more of the in depth info) -- came in with existing logo -- information focused</p>
         </div>
       </article>
-      <!-- Tour de Brewers 7 & 10, logo -->
+      <!-- Dixon's wedding -->
       <article class="right">
         <div class="placeholder"></div>
         <div class="details">
-          <h3 class="red">tour de brewers logos and stuff</h3>
-          <h6>t-shirt design</h6>
-          <p>against my aesthetic, common ground, bleh</p>
-        </div>
-      </article>
-      <!-- Dixon's wedding -->
-      <article>
-        <div class="placeholder"></div>
-        <div class="details">
-          <h3 class="red">Wedding Invitation Suite (?)</h3>
+          <h3 class="red">wedding invitation suite (?)</h3>
           <h6>logo design</h6>
           <p>water color design, </p>
         </div>
