--- a/portfolio/transcend.html
+++ b/portfolio/transcend.html
@@ -16,8 +16,8 @@
   <!-- styles & images -->
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Roboto:400,700" rel="stylesheet">
   <link href="../css/styles.css" rel="stylesheet">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+  <link rel="icon" href="../favicon.ico" type="image/x-icon">
   <!-- scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -39,7 +39,10 @@
     </header>
   <!-- content -->
   <section id="content" class="width">
-    <h2>logo and custom wordpress theme</h2>
+    <h2>purchase process redesign</h2>
+    <div>
+
+    </div>
   </section>
   <!-- footer -->
   <footer id="contact">
@@ -48,19 +51,19 @@
         <div class="social">
           <h2>Let's talk.</h2>
           <a href="mailto:&#104;&#97;&#110;&#110;&#97;&#104;&#115;&#116;&#101;&#105;&#110;&#100;&#101;&#115;&#105;&#103;&#110;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;" title="email me">
-            <img src="images/email.svg" width="24" />
+            <img src="../images/email.svg" width="24" />
             <span>hannahsteindesigns@gmail.com</span>
           </a>
           <a href="https://www.linkedin.com/in/hannahsteindesigns" title="connect on linkedin">
-            <img src="images/linkedin.svg" width="24" />
+            <img src="../images/linkedin.svg" width="24" />
             <span>linkedin.com/in/hannahsteindesigns</span>
           </a>
           <a href="https://www.behance.net/hannahsteindesigns" title="see more of my work on behance">
-            <img src="images/behance.svg" width="24" />
+            <img src="../images/behance.svg" width="24" />
             <span>behance.net/hannahsteindesigns</span>
           </a>
           <a href="https://issuu.com/hannahsteindesigns" title="see more of my print work on issuu">
-            <img src="images/issuu.svg" width="24" />
+            <img src="../images/issuu.svg" width="24" />
             <span>issuu.com/hannahsteindesigns</span>
           </a>
         </div>
@@ -85,6 +88,6 @@
       </section>
     </div>
   </footer>
-  <script src="js/scripts.js"></script>
+  <script src="../js/scripts.js"></script>
 </body>
 </html>
