--- a/index.html
+++ b/index.html
@@ -87,16 +87,8 @@
         <div class="details">
           <h3 class="red">custom wordpress theme</h3>
           <h6>Central Research Associates</h6>
-          <p>primary audience: patients looking to enroll in free trials (front page, attention grabbing), secondary audience: potential sponsors (more of the in depth info) -- came in with existing logo -- information focused</p>
-        </div>
-      </article>
-      <!-- Dixon's wedding -->
-      <article class="right">
-        <div class="placeholder"></div>
-        <div class="details">
-          <h3 class="red">wedding invitation suite (?)</h3>
-          <h6>logo design</h6>
-          <p>water color design, </p>
+          <p>Central Research Associates came to me to set up a web presence. They had two goals that sometimes conflicted — provide information for patients looking to enroll in free trials as well as information for other research organizations and hospitals looking to partner with them. The challenge was to inform the latter without overwhelming the former with unnecessary information.</p>
+          <p>After we determined trial participants would be the primary audience, I accomplished this by placing a large, attention-grabbing call to action on the homepage that immediately whisks potential participants away to the page relevant to them. Others looking for more in-depth information can follow the links below that or use the navigation. I created icons to categorize their text-heavy pages, grouped like content under linked subheadings, and instituted cross-linking throughout all the informative pages.</p>
         </div>
       </article>
     </div>
