--- a/about.html
+++ b/about.html
@@ -39,15 +39,18 @@
     </header>
     <div class="clear"></div>
   <!-- content -->
-  <section id="content" class="width about">
+  <section id="content" class="width">
     <h2>about me</h2>
-    <article>
-      <p>I'm a <strong>front-end developer</strong> and <strong>designer</strong>. </p>
-      <p>I work at <strong>TicketBiscuit</strong>, where I create and update designs for both a public-facing <span class="nobreak">e-commerce</span> platform and a client-facing dashboard. I also design interfaces for our various branded mobile apps on iOS and Android.</p>
+    <article class="about">
+      <div>
+        <p>I'm a <strong>front-end developer</strong> and <strong>designer</strong>. I take projects from initial sketches through static wireframes and basic prototypes all the way to the live finished product.</p>
+        <p>I work at <strong>TicketBiscuit</strong> in Birmigham, Alabama, where I create and update designs for both a public-facing <span class="nobreak">e-commerce</span> platform and a client-facing dashboard. I also design interfaces for our various branded mobile apps on iOS and Android.</p>
+        <p>I'm increasingly passionate about <strong>user experience</strong> as the guiding principle for everything I create on the web.</p>
+      </div>
+      <aside>
+        <p><a href="images/Stein-resume.pdf" alt="Download PDF resume" target="_blank">Download PDF resume.</a></p>
+      </aside>
     </article>
-    <aside>
-      <p><a href="images/Stein-resume.pdf" alt="Download PDF resume" target="_blank">Download PDF resume.</a></p>
-    </aside>
   </section>
   <!-- footer -->
   <footer id="contact">
