--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 
     gtag('config', 'UA-52747973-1');
   </script>
-  <title>hannah stein designs</title>
+  <title>hannah stein designs | about</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, initial-scale=1, maximum-scale=2, user-scalable=yes">
   <!-- styles & images -->
@@ -37,7 +37,6 @@
         </nav>
     </div>
     </header>
-    <div class="clear"></div>
   <!-- content -->
   <section id="content" class="width">
     <h2>about me</h2>
