--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </header>
   <!-- content -->
   <section id="content" class="width">
-    <h2>design &amp; development</h2>
+    <h2>front-end development &amp; design</h2>
     <div class="portfolio">
       <!-- TB purchase process -->
       <article>
