default buttons, emphasis

--- a/about.html
+++ b/about.html
@@ -42,9 +42,9 @@
     <h2>about me</h2>
     <article class="about">
       <div>
-        <p>I'm a <strong>front-end developer</strong> and <strong>designer</strong>. I take projects from initial sketches through static wireframes and basic prototypes all the way to the live finished product.</p>
-        <p>I work at <strong>TicketBiscuit</strong> in Birmigham, Alabama, where I create and update designs for both a public-facing <span class="nobreak">e-commerce</span> platform and a client-facing dashboard. I also design interfaces for our various branded mobile apps on iOS and Android.</p>
-        <p>My roots are in print design, but these days almost everything is on the web &mdash; including my work. I'm increasingly passionate about <strong>user experience</strong> as the guiding principle for everything I create.</p>
+        <p>I'm a <span class="stress">front-end developer</span> and <span class="stress">designer</span>. I take projects from initial sketches through static wireframes and basic prototypes all the way to the live finished product.</p>
+        <p>I work at <span class="stress">TicketBiscuit</span> in Birmigham, Alabama, where I create and update designs for both a public-facing <span class="nobreak">e-commerce</span> platform and a client-facing dashboard. I also design interfaces for our various branded mobile apps on iOS and Android.</p>
+        <p>My roots are in print design, but these days almost everything is on the web &mdash; including my work. I'm increasingly passionate about <span class="stress">user experience</span> as the guiding principle for everything I create.</p>
       </div>
       <aside>
         <p><a href="images/Stein-resume.pdf" alt="Download PDF resume" target="_blank">Download PDF resume.</a></p>
