progressive image loading

--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
     <div class="portfolio">
       <!-- TB purchase process -->
       <article>
-        <a href="portfolio/ticketbiscuit.html" title="view TicketBiscuit purchase process case study" class="img"><img src="images/portfolio/thumb/purchase-process.png"/></a>
+        <a class="progressive img" href="portfolio/ticketbiscuit.html" title="check out my TicketBiscuit case study">
+          <img class="lowres" src="images/portfolio/low-res/purchase-process.jpg" data-image="images/portfolio/thumb/purchase-process.png">
+          <img class="overlay" src="" alt="purchase process design development">
+        </a>
         <div class="details">
           <h3 class="red">purchase process redesign</h3>
           <h6>TicketBiscuit</h6>
@@ -53,7 +56,10 @@
       </article>
       <!-- Transcend -->
       <article class="right">
-        <a href="portfolio/transcend.html" title="view Transcend logo and site case study" class="img"><img src="images/portfolio/thumb/transcend.png"/></a>
+        <a class="progressive img" href="portfolio/transcend.html" title="check out my Transcend case study">
+          <img class="lowres" src="images/portfolio/low-res/transcend.jpg" data-image="images/portfolio/thumb/transcend.png">
+          <img class="overlay" src="" alt="therapy website design development">
+        </a>
         <div class="details">
           <h3 class="red">logo &amp; custom wordpress theme</h3>
           <h6>Transcend Individual and Family Counseling</h6>
@@ -63,7 +69,10 @@
       </article>
       <!-- Tower -->
       <article>
-        <img src="images/portfolio/thumb/tower.png" title="tower literary magazine"/>
+        <div class="progressive img">
+          <img class="lowres" src="images/portfolio/low-res/tower.jpg" data-image="images/portfolio/thumb/tower.png">
+          <img class="overlay" src="" alt="literary magazine design development">
+        </div>
         <div class="details">
           <h3 class="red">literary magazine layout &amp; curation</h3>
           <h6>Tower &mdash; University of Montevallo</h6>
@@ -73,7 +82,10 @@
       </article>
       <!-- Rojo Ad & Menus -->
       <article class="right">
-        <img src="images/portfolio/thumb/rojo.png" title="Rojo ad design and menu redesign"/>
+        <div class="progressive img">
+          <img class="lowres" src="images/portfolio/low-res/rojo.jpg" data-image="images/portfolio/thumb/rojo.png">
+          <img class="overlay" src="" alt="menu ad design development">
+        </div>
         <div class="details">
           <h3 class="red">ad design &amp; menu redesign</h3>
           <h6>Rojo Latin & American Food</h6>
@@ -83,7 +95,10 @@
       </article>
       <!-- Central Research Associates -->
       <article>
-        <img src="images/portfolio/thumb/central-trials.png" title="custom WordPress theme"/>
+        <div class="progressive img">
+          <img class="lowres" src="images/portfolio/low-res/central-trials.jpg" data-image="images/portfolio/thumb/central-trials.png">
+          <img class="overlay" src="" alt="wordpress custom theme design development">
+        </div>
         <div class="details">
           <h3 class="red">custom wordpress theme</h3>
           <h6>Central Research Associates</h6>
