--- a/portfolio/ticketbiscuit.html
+++ b/portfolio/ticketbiscuit.html
@@ -38,7 +38,7 @@
     </div>
     </header>
   <!-- content -->
-  <section id="content" class="width">
+  <section id="content" class="width case">
     <article class="overview">
       <h2>purchase process redesign</h2>
       <h5>in-house designer &amp; developer at TicketBiscuit LLC</h5>
