animations, prefix mixin

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     </header>
   <!-- content -->
   <section id="content" class="width">
-    <h2>front-end development &amp; design</h2>
-    <div class="portfolio">
+    <h2>front-end development <span class="break">&amp; design</span></h2>
+    <div class="portfolio animate fade">
       <!-- TB purchase process -->
       <article>
         <a class="progressive img" href="portfolio/ticketbiscuit.html" title="check out my TicketBiscuit case study">
