--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <h2>front-end development <span class="break">&amp; design</span></h2>
     <div class="portfolio animate fade">
       <!-- TB purchase process -->
-      <article>
+      <article class="slide">
         <a class="progressive img" href="portfolio/ticketbiscuit.html" title="check out my TicketBiscuit case study">
           <img class="lowres" src="images/portfolio/low-res/purchase-process.jpg" data-image="images/portfolio/thumb/purchase-process.png">
           <img class="overlay" src="" alt="purchase process design development">
@@ -55,7 +55,7 @@
         </div>
       </article>
       <!-- Transcend -->
-      <article class="right">
+      <article class="right slide">
         <a class="progressive img" href="portfolio/transcend.html" title="check out my Transcend case study">
           <img class="lowres" src="images/portfolio/low-res/transcend.jpg" data-image="images/portfolio/thumb/transcend.png">
           <img class="overlay" src="" alt="therapy website design development">
@@ -68,7 +68,7 @@
         </div>
       </article>
       <!-- Tower -->
-      <article>
+      <article class="slide">
         <div class="progressive img">
           <img class="lowres" src="images/portfolio/low-res/tower.jpg" data-image="images/portfolio/thumb/tower.png">
           <img class="overlay" src="" alt="literary magazine design development">
@@ -81,7 +81,7 @@
         </div>
       </article>
       <!-- Rojo Ad & Menus -->
-      <article class="right">
+      <article class="right slide">
         <div class="progressive img">
           <img class="lowres" src="images/portfolio/low-res/rojo.jpg" data-image="images/portfolio/thumb/rojo.png">
           <img class="overlay" src="" alt="menu ad design development">
@@ -94,7 +94,7 @@
         </div>
       </article>
       <!-- Central Research Associates -->
-      <article>
+      <article class="slide">
         <div class="progressive img">
           <img class="lowres" src="images/portfolio/low-res/central-trials.jpg" data-image="images/portfolio/thumb/central-trials.png">
           <img class="overlay" src="" alt="wordpress custom theme design development">
