--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
         <p><a href="images/Stein-resume.pdf" alt="Hannah's resume" target="_blank">Download my PDF résumé.</a></p>
       </div>
       <aside>
-        <div class="placeholder"></div>
+        <img src="images/selfie-square.jpg" title="Hannah Stein" />
       </aside>
     </article>
   </section>
